# mnist_ml_rust

./: Cargo.toml
src/: main.rs  tests.rs  utils.rs
