[package]
name = "mnist_ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
polars = "0.37.0"
polars-core = { version = "0.37.0", features = ["ndarray"] }
rand = "0.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
